--- a/catalog.html
+++ b/catalog.html
@@ -5,53 +5,64 @@
   <meta charset="utf-8">
   <title>Каталог магазина инструмента Техномарт</title>
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i|PT+Sans:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic-ext" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&amp;subset=cyrillic-ext" rel="stylesheet">
 </head>
+
 <body>
   <header>
-    <section class="header-top">
-      <div class="header-logo">
-        <a href="">
-          <h1 class="logo">Техномарт</h1>
-        </a>
-      </div>
-      <div class="search-field">
-        <input type="search" name="nav-search" placeholder="Поиск">
-      </div>
-      <div class="bookmarks">
-        <a href="">Закладки</a>
-      </div>
-      <div class="cart">
-        <a href="">Корзина</a>
-      </div>
-      <div class="order">
-        <a href="">Оформить заказ</a>
-      </div>
-    </section>
-    <section class="intro-login">
-      <h2>Интернет магазин строительных материалов и инструментов для ремонта</h2>
-      <p class="intro-contacts-phone">
-        +7 (812) 555-05-55
-      </p>
-      <p class="intro-contacts-adress">
-        г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-      </p>
-      <div class="login">
-        <a href="#">Войти</a>
-        <a href="#">Регистрация</a>
-      </div>
-    </section>
-    <nav class="main-navigation">
-      <ul class="main-navigation-list">
-        <li class="main-navigation-item">Главная</li>
-        <li class="main-navigation-item">Компания</li>
-        <li class="main-navigation-item">Каталог</li>
-        <li class="main-navigation-item">Новости</li>
-        <li class="main-navigation-item">Спецпредложения</li>
-        <li class="main-navigation-item">Доставка</li>
-        <li class="main-navigation-item">Контакты</li>
-      </ul>
-    </nav>
+    <div class="top-wrapper">
+      <section class="header-top">
+        <h1 class="visually-hidden">Магазин строительного инструмента Техномарт</h1>
+        <div class="header-logo-container">
+          <a class="header-logo" href="">
+            Техномарт
+          </a>
+        </div>
+        <div class="search-field">
+          <input type="search" name="nav-search" placeholder="Поиск">
+        </div>
+        <div class="top-item">
+          <a href="">Закладки</a>
+        </div>
+        <div class="top-item">
+          <a href="">Корзина</a>
+        </div>
+        <div class="top-item active">
+          <a href="">Оформить заказ</a>
+        </div>
+      </section>
+    </div>
+    <div class="bottom-wrapper">
+      <section class="intro-login">
+        <h2 class="visually-hidden">магазин Техномарт</h2>
+        <p class="intro-about">Интернет магазин строительных материалов и инструментов для ремонта</p>
+        <p class="intro-contacts-phone">
+          +7 (812) 555-05-55
+        </p>
+        <p class="intro-contacts-adress">
+          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+        </p>
+        <div class="login">
+          <div class="user-field">
+            <p class="user-name">Равшан Джамшутович</p>
+            <a class="user-button" href="">Мои заказы</a>
+            <a class="user-button" href="">Личный кабинет</a>
+          </div>
+        </div>
+      </section>
+      <nav class="main-navigation">
+        <ul class="main-navigation-list">
+          <li class="main-navigation-item"><a href="#">Главная</a></li>
+          <li class="main-navigation-item"><a href="#">Компания</a></li>
+          <li class="main-navigation-item"><a href="#">Каталог</a></li>
+          <li class="main-navigation-item"><a href="#">Новости</a></li>
+          <li class="main-navigation-item"><a href="#">Спецпредложения</a></li>
+          <li class="main-navigation-item"><a href="#">Доставка</a></li>
+          <li class="main-navigation-item"><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
   <main>
     <div class="breadcumbs">
@@ -76,13 +87,16 @@
     </div>
     <section class="filters">
       <div class="filters-caption">
-        <h2 class="filters-caption">
+        <h2>
           Перфораторы
         </h2>
       </div>
       <form action="https://echo.htmlacademy.ru" class="options" method="post">
-        <fieldset>
-          <legend class="price">Цена:</legend>
+        <div class="form-caption">
+          <h3>Фильтр:</h3>
+        </div>
+        <fieldset class="range-form">
+          <legend>Цена:</legend>
           <div class="range-field">
             <div class="range-controls">
               <div class="scale">
@@ -97,8 +111,8 @@
             </div>
           </div>
         </fieldset>
-        <fieldset>
-          <legend>Производители</legend>
+        <fieldset class="vendors-form">
+          <legend>Производители:</legend>
           <label class="interface-checkbox">
             <input class="visually-hidden" type="checkbox" name="vendor-bosch" checked>
             <span class="checkbox-indicator">Bosch</span>
@@ -112,15 +126,15 @@
             <span class="checkbox-indicator">Makita</span>
           </label>
           <label class="interface-checkbox">
-            <input class="visually-hidden" type="checkbox" name="vendor-dewalt" >
+            <input class="visually-hidden" type="checkbox" name="vendor-dewalt">
             <span class="checkbox-indicator">Dewalt</span>
           </label>
           <label class="interface-checkbox">
-            <input class="visually-hidden" type="checkbox" name="vendor-hitachi" >
+            <input class="visually-hidden" type="checkbox" name="vendor-hitachi">
             <span class="checkbox-indicator">Hitachi</span>
           </label>
         </fieldset>
-        <fieldset>
+        <fieldset class="power-form">
           <legend>Питание</legend>
           <label class="interface-radio">
             <input class="visually-hidden" type="radio" name="power" value="accumulator">
@@ -131,25 +145,28 @@
             <span class="radio-indicator">Сетевые</span>
           </label>
         </fieldset>
-        <button type="submit">Показать</button>
+        <button type="submit" class="button-show">Показать</button>
       </form>
     </section>
     <section class="products-section">
+      <h2 class="visually-hidden">Товары</h2>
       <div class="sorting">
         <ul class="sorting-list">
           <li class="sorter-head">
-            <h4>Сортировка:</h4>
+            <b>Сортировка:</b>
           </li>
           <li class="sorter-name"><a href="#" class="active">по цене</a></li>
           <li class="sorter-name"><a href="#">по типу</a></li>
           <li class="sorter-name"><a href="#">по функционалу</a></li>
           <li class="sorter-btns">
             <a class="sorter-btn" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path fill="#231F20" d="M5.5 0L0 10h11z"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                <path fill="#231F20" d="M5.5 0L0 10h11z" /></svg>
               <span class="visually-hidden">Сортировка сверху вниз</span>
             </a>
             <a class="sorter-btn active" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path fill="#231F20" d="M5.5 10L0 0h11"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                <path fill="#231F20" d="M5.5 10L0 0h11" /></svg>
               <span class="visually-hidden">Сортировка снизу вверх</span>
             </a>
           </li>
@@ -158,125 +175,175 @@
       <ul class="product-list">
         <li class="perforator">
           <img src="img/BFG3000.jpg" alt="BFG 3000">
-          <p>Перфоратор BOSCH BFG 3000</p>
+          <p class="item-name">Перфоратор BOSCH BFG 3000</p>
           <span class="old-price">22500 Р.</span>
           <b class="new-price">15500</b>
+          <div class="item-actions">
+            <a href="#" class="in-cart">Купить</a>
+            <a href="#" class="in-bookletter">В закладки</a>
+          </div>
         </li>
         <li class="perforator">
           <img src="img/BFG6000.jpg" alt="BFG 6000">
-          <p>Перфоратор BOSCH BFG 6000</p>
+          <p class="item-name">Перфоратор BOSCH BFG 6000</p>
           <span class="old-price">30500 Р.</span>
           <b class="new-price">25500</b>
+          <div class="item-actions">
+            <a href="#" class="hover-button in-cart">Купить</a>
+            <a href="#" class="hover-button in-bookletter">В закладки</a>
+          </div>
         </li>
         <li class="perforator perforator-buy">
-          <div class="buy">
-            <a href="" class="in-cart">Купить</a>
-            <a href="" class="in-bookletter">В закладки</a>
-          </div>
-          <p>Перфоратор BOSCH BFG 2000</p>
+          <img src="img/BFG2000.jpg" alt="BFG 2000">
+          <p class="item-name">Перфоратор BOSCH BFG 2000</p>
           <b class="new-price">12500</b>
+          <div class="item-actions">
+            <a href="#" class="in-cart">Купить</a>
+            <a href="#" class="in-bookletter">В закладки</a>
+          </div>
         </li>
         <li class="perforator">
           <img src="img/BFG3000.jpg" alt="BFG 3000">
-          <p>Перфоратор BOSCH BFG 3000</p>
+          <p class="item-name">Перфоратор BOSCH BFG 3000</p>
           <span class="old-price">22500 Р.</span>
           <b class="new-price">15500</b>
+          <div class="item-actions">
+            <a href="#" class="in-cart">Купить</a>
+            <a href="#" class="in-bookletter">В закладки</a>
+          </div>
         </li>
         <li class="perforator">
           <img src="img/BFG6000.jpg" alt="BFG 6000">
-          <p>Перфоратор BOSCH BFG 6000</p>
+          <p class="item-name">Перфоратор BOSCH BFG 6000</p>
           <span class="old-price">30500 Р.</span>
           <b class="new-price">25500</b>
+          <div class="item-actions">
+            <a href="#" class="in-cart">Купить</a>
+            <a href="#" class="in-bookletter">В закладки</a>
+          </div>
         </li>
         <li class="perforator">
           <img src="img/BFG2000.jpg" alt="BFG 2000">
-          <p>Перфоратор BOSCH BFG 2000</p>
+          <p class="item-name">Перфоратор BOSCH BFG 2000</p>
           <b class="new-price">12500</b>
+          <div class="item-actions">
+            <a href="#" class="in-cart">Купить</a>
+            <a href="#" class="in-bookletter">В закладки</a>
+          </div>
         </li>
         <li class="perforator perforator-new">
           <img src="img/BFG3000.jpg" alt="BFG 3000">
-          <p>Перфоратор BOSCH BFG 3000</p>
+          <p class="item-name">Перфоратор BOSCH BFG 3000</p>
           <span class="old-price">22500 Р.</span>
           <b class="new-price">15500</b>
+          <div class="item-actions">
+            <a href="#" class="in-cart">Купить</a>
+            <a href="#" class="in-bookletter">В закладки</a>
+          </div>
         </li>
         <li class="perforator">
           <img src="img/BFG6000.jpg" alt="BFG 6000">
-          <p>Перфоратор BOSCH BFG 6000</p>
+          <p class="item-name">Перфоратор BOSCH BFG 6000</p>
           <span class="old-price">30500 Р.</span>
           <b class="new-price">25500</b>
+          <div class="item-actions">
+            <a href="#" class="in-cart">Купить</a>
+            <a href="#" class="in-bookletter">В закладки</a>
+          </div>
         </li>
         <li class="perforator">
           <img src="img/BFG2000.jpg" alt="BFG 2000">
-          <p>Перфоратор BOSCH BFG 2000</p>
+          <p class="item-name">Перфоратор BOSCH BFG 2000</p>
           <b class="new-price">12500</b>
+          <div class="item-actions">
+            <a href="#" class="in-cart">Купить</a>
+            <a href="#" class="in-bookletter">В закладки</a>
+          </div>
         </li>
       </ul>
       <div class="page-navigation">
-        <a href="">1</a>
-        <a href="">2</a>
-        <a href="">3</a>
-        <a href="">Следующая</a>
+        <a href="#" class="page-number active">1</a>
+        <a href="#" class="page-number">2</a>
+        <a href="#" class="page-number">3</a>
+        <a href="#" class="page-number page-next">Следующая</a>
       </div>
     </section>
-    <section class="about-perforator">
-      <h3>Пара слов о перфораторах</h3>
-      <p>
-        Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
-        Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
-      </p>
-    </section>
+    <div class="bottom-wrapper">
+      <section class="about-device">
+        <h3>Пара слов о перфораторах</h3>
+        <p>
+          Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
+          Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный
+          молоток и ударная дрель.
+        </p>
+      </section>
+    </div>
   </main>
   <footer>
-    <nav class="footer-navigation">
-      <div class="footer-logo-container">
-        <h3 class="footer-logo">
-          Техномарт
-        </h3>
-      </div>
-      <ul class="footer-up-menu">
-        <li class="footer-up-item">Компания</li>
-        <li class="footer-up-item">Новости</li>
-        <li class="footer-up-item">Каталог</li>
-        <li class="footer-up-item">Доставка</li>
-        <li class="footer-up-item">Контакты</li>
-      </ul>
-      <div class="footer-item-adress">
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <p>+7 (812) 555-05-55</p>
-      </div>
-      <ul class="footer-menu-down">
-        <li class="footer-down-item">Материалы</li>
-        <li class="footer-down-item">Техника</li>
-        <li class="footer-down-item">Инструмент</li>
-        <li class="footer-down-item">Спецпредложения</li>
-      </ul>
-    </nav>
-    <aside class="page-footer">
-      <div class="copyright">
-        <p>2010-2017 Компания "Техномарт" Все права защищены</p>
-      </div>
-      <div class="socials">
-        <ul class="social-list">
-          <li class="social-vk">
-            <span class="visually-hidden">Вконтакте</span>
-          </li>
-          <li class="social-fb">
-            <span class="visually-hidden">Фейсбук</span>
-          </li>
-          <li class="social-inst">
-            <span class="visually-hidden">Инстаграм</span>
-          </li>
+    <div class="footer-top-wrapper">
+      <nav class="footer-navigation">
+        <div class="footer-logo-container">
+          <a class="footer-logo">Техномарт</a>
+        </div>
+        <ul class="footer-up-menu">
+          <li class="footer-up-item">Компания</li>
+          <li class="footer-up-item">Новости</li>
+          <li class="footer-up-item">Каталог</li>
+          <li class="footer-up-item">Доставка</li>
+          <li class="footer-up-item">Контакты</li>
         </ul>
-      </div>
-      <div class="feedback">
-        <p>Обратная связь:</p>
-        <b>mail.htmlacademy.ru</b>
-      </div>
-      <div class="developer">
-        <p>Разработано — </p>
-        <b>htmlacademy.ru</b>
-      </div>
-    </aside>
+        <div class="footer-item-adress">
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <p>+7 (812) 555-05-55</p>
+        </div>
+        <ul class="footer-menu-down">
+          <li class="footer-down-item">Материалы</li>
+          <li class="footer-down-item">Техника</li>
+          <li class="footer-down-item">Инструмент</li>
+          <li class="footer-down-item">Спецпредложения</li>
+        </ul>
+      </nav>
+    </div>
+    <div class="footer-down-wrapper">
+      <aside class="page-footer">
+        <div class="copyright">
+          <p>2010-2017 Компания "Техномарт" Все права защищены</p>
+        </div>
+        <div class="socials">
+          <ul class="social-list">
+            <li class="social-vk">
+              <a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15">
+                  <path fill="#FFF" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z" /></svg>
+                <span class="visually-hidden">Вконтакте</span>
+              </a>
+            </li>
+            <li class="social-fb">
+              <a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
+                  <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" /></svg>
+                <span class="visually-hidden">Фейсбук</span>
+              </a>
+            </li>
+            <li class="social-inst">
+              <a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
+                  <path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z" /></svg>
+                <span class="visually-hidden">Инстаграм</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="feedback">
+          <p>Обратная связь:</p>
+          <b>mail.htmlacademy.ru</b>
+        </div>
+        <div class="developer">
+          <p>Разработано — </p>
+          <b>htmlacademy.ru</b>
+        </div>
+      </aside>
+    </div>
   </footer>
   <div class="modal modal-in-cart">
     <div class="notice">
@@ -284,7 +351,7 @@
     </div>
     <a href="">Оформить заказ</a>
     <a href="">Продолжить покупки</a>
-    <button href="" class="modal-close"></button>
+    <button class="modal-close"></button>
   </div>
 </body>
 
