--- a/catalog.html
+++ b/catalog.html
@@ -25,19 +25,19 @@
           </button>
         </div>
         <div class="top-item">
-          <a class="top-link link-blue" href="">
-            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16">
+          <a class="top-link" href="">
+            <svg class="bookletter-pic" xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16">
               <path fill="#6a7180" d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z" /></svg>
             Закладки: 0
           </a>
-          <a class="top-link link-blue active" href="">
-            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15">
+          <a class="top-link active" href="">
+            <svg class="cart-pic" xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15">
               <circle fill="#6a7180" cx="4.5" cy="13.5" r="1.5" />
               <circle fill="#6a7180" cx="12.5" cy="13.5" r="1.5" />
               <path fill="#6a7180" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z" /></svg>
             Корзина: 10
           </a>
-          <a class="top-link link-green" href="">Оформить заказ</a>
+          <a class="top-link green" href="">Оформить заказ</a>
         </div>
       </section>
     </div>
@@ -57,17 +57,26 @@
             <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
           </p>
         </div>
-        <div class="intro-wrapper login">
-          <div class="login-enter">
-            <a class="button-login enter" href="#">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
-                <path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z" />
-                <path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z" /></svg>
-              Войти
+        <div class="user-field">
+          <div class="user-wrapper" tabindex="0">
+            <a class="user-name" href="#">
+              Равшан Джамшутович
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18">
+                <path fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z" /></svg>
             </a>
-            <a class="button-login reg" href="#">Регистрация</a>
+            <a href="#" class="user-logout">
+              <svg class="logout-pic" xmlns="http://www.w3.org/2000/svg" width="21" height="17" viewBox="0 0 21 17">
+                <g fill="#c5c5c5">
+                  <path fill="#c5c5c5" d="M21 8.5L12.125 0v6h-6v5h6v6z" />
+                  <path fill="#c5c5c5" d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z" />
+                </g>
+              </svg>
+            </a>
           </div>
-        </div>
+          <div class="user-buttons">
+            <a class="user-button button-user-ord" href="#">Мои заказы</a>
+            <a class="user-button button-user-lk" href="#">Личный кабинет</a>
+          </div>
       </section>
       <nav class="main-navigation container">
         <a class="main-navigation-item" href="#">Главная</a>
@@ -186,12 +195,12 @@
               <li class="sorter-btns">
                 <a class="sorter-btn" href="#">
                   <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-                    <path fill="#231F20" d="M5.5 0L0 10h11z" /></svg>
+                    <path fill="#c5c5c5" d="M5.5 0L0 10h11z" /></svg>
                   <span class="visually-hidden">Сортировка сверху вниз</span>
                 </a>
                 <a class="sorter-btn active" href="#">
                   <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-                    <path fill="#231F20" d="M5.5 10L0 0h11" /></svg>
+                    <path fill="#c5c5c5" d="M5.5 10L0 0h11" /></svg>
                   <span class="visually-hidden">Сортировка снизу вверх</span>
                 </a>
               </li>
@@ -221,7 +230,7 @@
             <li class="popular-products-item products-item-new">
               <img src="img/BFG2000.jpg" alt="BFG 2000">
               <p class="item-name">Перфоратор BOSCH BFG 2000</p>
-                <span class="empty-price"></span>
+              <span class="empty-price"></span>
               <b class="new-price">12500 Р.</b>
               <div class="item-actions">
                 <a href="#" class="in-cart">Купить</a>
@@ -365,8 +374,8 @@
       <h3>Товар добавлен в корзину!</h3>
     </div>
     <div class="modal-cart-buttons">
-    <a class="btn-modal issue" href="">Оформить заказ</a>
-    <a class="btn-modal continue" href="">Продолжить покупки</a>
+      <a class="btn-modal issue" href="">Оформить заказ</a>
+      <a class="btn-modal continue" href="">Продолжить покупки</a>
     </div>
     <button class="modal-cart-close"></button>
   </div>
