--- a/index.html
+++ b/index.html
@@ -14,38 +14,27 @@
     <div class="top-wrapper">
       <section class="header-top container">
         <h1 class="visually-hidden">Магазин строительного инструмента Техномарт</h1>
-        <a class="header-logo" href="#">
+        <a class="header-logo" href="index.html">
           Техномарт
         </a>
-        <div class="search-field-container">
+        <form action="https://echo.htmlacademy.ru" method="post">
           <input class="search-field" type="search" name="nav-search" placeholder="Поиск:">
-          <button class="search-btn" href="#">
+          <button type="submit" class="search-btn" href="#">
             <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
               <path fill="#6a7180" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" /></svg>
           </button>
-        </div>
-        <div class="top-item">
-          <a class="top-link link-blue" href="">
-            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16">
-              <path fill="#6a7180" d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z" /></svg>
-            Закладки: 0
-          </a>
-          <a class="top-link link-blue" href="">
-            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15">
-              <circle fill="#6a7180" cx="4.5" cy="13.5" r="1.5" />
-              <circle fill="#6a7180" cx="12.5" cy="13.5" r="1.5" />
-              <path fill="#6a7180" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z" /></svg>
-            Корзина: 0
-          </a>
-          <a class="top-link link-green active" href="">Оформить заказ</a>
-        </div>
+        </form>
+        <a class="top-link" href="">Закладки: 0</a>
+        <a class="top-link" href="">Корзина: 0</a>
+        <a class="top-link green" href="">Оформить заказ</a>
+
       </section>
     </div>
     <div class="bottom-wrapper">
       <section class="intro-login container">
         <h2 class="visually-hidden">магазин Техномарт</h2>
         <div class="intro-wrapper about">
-          <p>Интернет магазин строительных материалов<br />и инструментов для ремонта</p>
+          <p>Интернет-магазин строительных материалов<br />и инструментов для ремонта</p>
         </div>
         <div class="intro-wrapper contacts">
           <p class="intro-phone">
@@ -414,14 +403,14 @@
     <button class="modal-close">закрыть</button>
     <form action="https://echo.htmlacademy.ru" method="post">
       <div class="write-form">
-      <label class="write-input">Ваше имя:<br />
-      <input type="text" name="name" id="name" placeholder="Представьтесь, пожалуйста">
-      </label>
-      <label class="write-input">Ваш e-mail:<br />
-      <input type="text" name="email" id="email" placeholder="Для отправки ответа">
-      </label>
-      <label class="write-text">Текст письма:<br />
-      <textarea name="letter" id="letter" cols="30" rows="5" placeholder="В свободной форме"></textarea>
+        <label class="write-input">Ваше имя:<br />
+          <input type="text" name="name" id="name" placeholder="Представьтесь, пожалуйста">
+        </label>
+        <label class="write-input">Ваш e-mail:<br />
+          <input type="text" name="email" id="email" placeholder="Для отправки ответа">
+        </label>
+        <label class="write-text">Текст письма:<br />
+          <textarea name="letter" id="letter" cols="30" rows="5" placeholder="В свободной форме"></textarea>
       </div>
       </label>
       <div class="btn-wrapper">
@@ -430,7 +419,8 @@
     </form>
   </div>
   <div class="modal-map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1544764336004" width="940" height="448" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651586!2d30.320894616097!3d59.938794181876254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1544764336004"
+      width="940" height="448" frameborder="0" style="border:0" allowfullscreen></iframe>
     <button class="modal-map-close">закрыть</button>
   </div>
 </body>
